[package]
name = "crdt"
version = "0.1.0"
edition = "2021"
authors = ["GijimaGarikai <garymcmascelyn@gmail.com>"]
description = "A high-performance text CRDT library in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/GijimaGarikai/CRDT"
readme = "README.md"

[lib]
name = "crdt"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

